[package]
name = "project"
version = "0.1.0"
authors = ["Ben Levinson <benjaminlevinson2019@u.northwestern.edu>"]
edition = "2018"

[dependencies]
rayon = "1.0.3"
conrod_core = { path = "conrod/conrod_core", version = "0.64" }
conrod_glium = { path = "conrod/backends/conrod_glium", version = "0.64" }
glium = { version = "0.23" }
conrod_example_shared = { path = "conrod/backends/conrod_example_shared", version = "0.64" }
conrod_winit = { path = "conrod/backends/conrod_winit", version = "0.64" }
find_folder = "0.3.0"
image = "0.21"
petgraph = "0.4"
rand = "0.6"
winit = "0.18"
